# Finance-Dashboard

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: schema.yml
backend/backend/: settings.py  urls.py
backend/dashboard/: serializers.py  services.py  urls.py  views.py
backend/finance/: filters.py  models.py  serializers.py  urls.py  views.py
backend/finance/migrations/: 0001_initial.py  0002_alter_financials_created_at_and_more.py  0003_financials_deleted_at_financials_is_deleted.py  0004_financials_created_by_financials_updated_by.py
backend/users/: models.py  permissions.py  serializers.py  throttles.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_customuser_email.py
