[project]
name = "finance-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "sqlparse>=0.5.5",
]
